--- a/landingpage/css/landingpage.css
+++ b/landingpage/css/landingpage.css
@@ -116,3 +116,6 @@ section.schedule.home-item .day ul.events li span {
 ul.nav a {
     color: black;
 }
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus{
+    border: 0px;
+    }
