--- a/landingpage/css/landingpage.css
+++ b/landingpage/css/landingpage.css
@@ -1,124 +1,151 @@
-body {margin:0 0 0 0;
-    width: 100%;
-    height: 100%;
-    font-family: 'Asap';
-    font-style: italic;
-    font-weight: 400;
-    src: local('Asap Italic'), local('Asap-Italic'), url(https://themes.googleusercontent.com/static/fonts/asap/v2/QnZU7dKCBgkkMBlac2djsOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
-
-    padding:0 30 0 30;}
-.nav{background-color: #D3360B;}
-div.row{margin: 0px}
-p{font-size: 1.25em;}
+body{
+	font-family: 'Asap';
+	font-style: italic;
+	font-weight: 400;
+	height: 100%;
+	padding: 0 30px 0 30px;
+	width: 100%;
+}
+#header{
+	background: #d3360b;
+	border-bottom: 1px solid #ad1e1c;
+	text-align: center;
+	width: 100%;
+	z-index: 2;
+}
+.navbar-header{
+	background: blue;
+}
+#navigation, #joiner{
+	position: absolute;
+}
+#brand{
+	margin-top: 8px;
+}
+@media (max-width: 920px) {
+	#brand{
+		display: none !important;
+	}
+}
+#navigation{
+	border: none;
+	bottom: 0;
+	left: 8px;
+}
+#navigation li{}
+#navigation li.active{
+	border-bottom: 1px solid #ad1e1c;
+}
+#navigation li a{
+	color: black;
+}
+#joiner{
+	top: 8px;
+	right: 8px;
+}
+#join.active{
+	background: #d3360b;
+	border: 1px solid #ad1e1c;
+	color: white;
+}
+p{
+	font-size: 1.25em;
+}
 .col-centered{
-    float: none;
-    margin: 0 auto;
-    }
-.navex{
-    position: fixed;
-    }
-.sect_register{
-    padding-top: 100px;
-    }
+	float: none;
+	margin: 0 auto;
+}
 .sect{
-    padding-top: 100px;
-    height: 700px;
-    }
-@media (max-width: 860px) {
-    #brand{
-        display: none;
-        }
-    }
-#mc_embed_signup{
-    background:#fff;
-    clear:left;
-    font:14px Helvetica,Arial,sans-serif; }
-
-.teampic{
-    /*float: left;
-    margin-right: 30px;
-    margin-bottom: 90px;*/
-    margin-bottom: 25px;
-    }
-/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-
+	min-height: 700px;
+	padding-top: 75px;
+}
+.sect_register{
+	padding-top: 100px;
+}
 section.schedule.home-item h3 {
-    margin-bottom: 0; color: #D3360B; font-size: 24px;
+	margin-bottom: 0; color: #D3360B; font-size: 24px;
 }
 section.schedule.home-item ul.events li time {
-    font-weight: bold; font-style: italic;
+	font-weight: bold; font-style: italic;
 }
-
 section.schedule.home-item div.title {
-    /*background: #e7730c;*/
-    font-size: 2em;
+	font-size: 2em;
 }
 section.schedule.home-item .day {
-    width: 240px; float: left; display: inline; padding: 0;
+	width: 240px; float: left; display: inline; padding: 0;
 }
 section.schedule.home-item .timeframe {
-    width: 240px; float: left; display: inline; padding: 10px;
+	width: 240px; float: left; display: inline; padding: 10px;
 }
 section.schedule.home-item .day h3 {
-    text-align: center; padding: 15px 20px;
+	text-align: center; padding: 15px 20px;
 }
 section.schedule.home-item .timeframe h3 {
-    text-align: center; padding: 15px 20px;
+	text-align: center; padding: 15px 20px;
 }
 section.schedule.home-item .timeframe h3 {
-    text-align: center; padding: 35px 20px;
+	text-align: center; padding: 35px 20px;
 }
 section.schedule.home-item .day.alt {
-    background: rgba(0, 0, 0, 0.02);
+	background: rgba(0, 0, 0, 0.02);
 }
 section.schedule.home-item .timeframe.alt {
-    background: rgba(0, 0, 0, 0.02);
+	background: rgba(0, 0, 0, 0.02);
 }
 section.schedule.home-item .day ul.events {
-    list-style: none; padding: 0;margin: 0;
+	list-style: none; padding: 0;margin: 0;
 }
 section.schedule.home-item .timeframe ul.events {
-    list-style: none; padding: 0;margin: 0;
+	list-style: none; padding: 0;margin: 0;
 }
 section.schedule.home-item .day ul.events li {
-    padding: 1.0em 10px; vertical-align: top;
+	padding: 1.0em 10px; vertical-align: top;
 }
 section.schedule.home-item .day ul.events li time {
-    display: -moz-inline-box; -moz-box-orient: vertical; display: inline-block;
-    vertical-align: middle; *vertical-align: auto; vertical-align: top;
-    color: #9199a3; width: 60px; margin: 0 10px; font-size: 12px;
+	display: -moz-inline-box; -moz-box-orient: vertical; display: inline-block;
+	vertical-align: middle; *vertical-align: auto; vertical-align: top;
+	color: #9199a3; width: 60px; margin: 0 10px; font-size: 12px;
 }
 section.schedule.home-item .timeframe ul.events p {
-    text-align: center;
+	text-align: center;
 }
 section.schedule.home-item .timeframe ul.events li time {
-    color: #9199a3;
-    font-size: 0.8em;
+	color: #9199a3;
+	font-size: 0.8em;
 }
 section.schedule.home-item .day ul.events li time {
-    *display: inline;
+	*display: inline;
 }
 section.schedule.home-item .day ul.events li span {
-    display: -moz-inline-box; -moz-box-orient: vertical; display: inline-block;
-    vertical-align: middle; *vertical-align: auto; vertical-align: top;
-    width: 130px;
+	display: -moz-inline-box; -moz-box-orient: vertical; display: inline-block;
+	vertical-align: middle; *vertical-align: auto; vertical-align: top;
+	width: 130px;
 }
 section.schedule.home-item .day ul.events li span {
-    *display: inline;
+	*display: inline;
 }
-.clear {
-    clear: both;
-}
-
+/* team */
 .team-detail {
-    display: inline-block;
-    margin-left: 25px;
+	display: inline-block;
+	margin-left: 25px;
 }
-
-ul.nav a {
-    color: black;
+.teampic{
+	margin-bottom: 25px;
 }
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus{
-    border: 0px;
-    }
+/* mailchimp */
+#mc_embed_signup{
+	background: white;
+	border: 1px solid #d3360b;
+	border-bottom-width: 10px;
+	margin: 0;
+	padding-top: 60px;
+	position: fixed;
+	left: 5%;
+	top: 0;
+	right: 5%;
+	width: 90%;
+	z-index: 1;
+}
+#mc_embed_signup .btn{
+	margin: 0;
+}
