--- a/landingpage/css/landingpage.css
+++ b/landingpage/css/landingpage.css
@@ -1,22 +1,65 @@
 body{
-	font-family: 'Asap';
-	font-style: italic;
-	font-weight: 400;
+	color: #222;
+	font-family: 'Lucida Grande', 'Lucida Sans', 'Lucida Sans Unicode', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	font-size: 14px;
 	height: 100%;
-	padding: 0 30px 0 30px;
 	width: 100%;
 }
+h2{
+	margin-bottom: 50px;
+}
+h3{
+	color: #d3360b;
+	margin-top: 40px;
+}
+p{}
+blockquote{
+	color: #666;
+	font-size: 1.1em;
+	font-style: italic;
+	margin: 20px 10px;
+	text-align: justify;
+	padding-right: 80px;
+}
+.btn-facebook{
+	background-color: #3b5998;
+	border: 1px solid #dfe3ee;
+	font-style: normal !important;
+	color: #fff;
+}
+.btn-facebook:hover{
+	background: #dfe3ee;
+	border: 1px solid #3b5998;
+	color: #3b5998;
+}
+.col-centered{
+	float: none;
+	margin: 0 auto;
+}
+.sect.about{
+	padding-top: 100px;
+}
+.sect{
+	max-width: 768px;
+	min-height: 500px;
+}
+.sect + .sect{
+	border-top: 1px solid #ccc;
+	margin-top: 100px;
+	padding-top: 100px;
+}
+/*layout*/
 #header{
-	background: #d3360b;
+	background-color: #d3360b;
 	border-bottom: 1px solid #ad1e1c;
 	text-align: center;
 	width: 100%;
-	z-index: 2;
+	z-index: 3;
 }
 .navbar-header{
 	background: blue;
 }
-#navigation, #joiner{
+#navigation{
 	position: absolute;
 }
 #brand{
@@ -32,130 +75,79 @@ body{
 	bottom: 0;
 	left: 8px;
 }
-#navigation li{}
-#navigation li.active{
-	border-bottom: 1px solid #ad1e1c;
-}
 #navigation li a{
-	color: black;
+	color: #fff;
 }
-#joiner{
-	top: 8px;
-	right: 8px;
+#navigation li.active a{
+	/*border-bottom: 1px solid #ad1e1c;*/
+	color: #000;
 }
-#join.active{
-	background: #d3360b;
-	border: 1px solid #ad1e1c;
-	color: white;
+#footer{
+	background: #fafafa;
+	border-top: 1px solid #f0f0f0;
+	color: #aaa;
+	display: block;
+	font-size: 0.8em;
+	min-height: 150px;
+	padding: 50px 0;
+	text-align: center;
+	width: 100%;
 }
-p{
-	font-size: 1.25em;
-}
-.col-centered{
-	float: none;
-	margin: 0 auto;
-}
-.sect{
-	min-height: 700px;
-	padding-top: 75px;
-}
-.sect_register{
-	padding-top: 100px;
-}
-section.schedule.home-item h3 {
-	margin-bottom: 0; color: #D3360B; font-size: 24px;
-}
-section.schedule.home-item ul.events li time {
-	font-weight: bold; font-style: italic;
-}
-section.schedule.home-item div.title {
-	font-size: 2em;
-}
-section.schedule.home-item .day {
-	width: 240px; float: left; display: inline; padding: 0;
-}
-section.schedule.home-item .timeframe {
-	width: 240px; float: left; display: inline; padding: 10px;
-}
-section.schedule.home-item .day h3 {
-	text-align: center; padding: 15px 20px;
-}
-section.schedule.home-item .timeframe h3 {
-	text-align: center; padding: 15px 20px;
-}
-section.schedule.home-item .timeframe h3 {
-	text-align: center; padding: 35px 20px;
-}
-section.schedule.home-item .day.alt {
-	background: rgba(0, 0, 0, 0.02);
-}
-section.schedule.home-item .timeframe.alt {
-	background: rgba(0, 0, 0, 0.02);
-}
-section.schedule.home-item .day ul.events {
-	list-style: none; padding: 0;margin: 0;
-}
-section.schedule.home-item .timeframe ul.events {
-	list-style: none; padding: 0;margin: 0;
-}
-section.schedule.home-item .day ul.events li {
-	padding: 1.0em 10px; vertical-align: top;
-}
-section.schedule.home-item .day ul.events li time {
-	display: -moz-inline-box; -moz-box-orient: vertical; display: inline-block;
-	vertical-align: middle; *vertical-align: auto; vertical-align: top;
-	color: #9199a3; width: 60px; margin: 0 10px; font-size: 12px;
-}
-section.schedule.home-item .timeframe ul.events p {
+/*events*/
+.event{
+	min-height: 220px;
+	padding: 10px 0;
 	text-align: center;
 }
-section.schedule.home-item .timeframe ul.events li time {
-	color: #9199a3;
-	font-size: 0.8em;
+.event:nth-child(odd){
+	background: #fafafa;
 }
-section.schedule.home-item .day ul.events li time {
-	*display: inline;
+.event:nth-child(even){
+	border: 1px solid #fafafa;
+	margin: 0 -1px;
 }
-section.schedule.home-item .day ul.events li span {
-	display: -moz-inline-box; -moz-box-orient: vertical; display: inline-block;
-	vertical-align: middle; *vertical-align: auto; vertical-align: top;
-	width: 130px;
+.event h3{
+	margin-bottom: 25px;
+	text-align: center;
 }
-section.schedule.home-item .day ul.events li span {
-	display: inline;
+.event time{
+	color: #a9a9a9;
+	display: block;
+	/*font-weight: bold;*/
+	margin-bottom: 15px;
+}
+.event p{
+	font-size: 1.15em;
+}
+/*program*/
+#program h3{
+	text-align: center;
+}
+#program .day{
 }
 /* team */
 #team{}
-#team .team-member{
-	margin-bottom: 25px;
+#team .team-member + .team-member{
+	margin-top: 20px;
 }
 #team .team-member img{
 	display: inline-block;
-	border-radius: 50px;
+	border: 10px solid #fff;
+	border-radius: 70px;
+	margin-bottom: 20px;
+	position: relative;
 	vertical-align: middle;
+	z-index: 2;
 }
-#team .team-member .team-detail {
+#team .team-member h3{
 	display: inline-block;
-	margin-left: 25px;
-	vertical-align: middle;
+	margin-left: 20px;
 }
-#team .team-member .team-detail h3{
-	text-transform: uppercase;
-}
-/* mailchimp */
-#mc_embed_signup{
-	background: white;
-	border: 1px solid #d3360b;
-	border-bottom-width: 10px;
-	margin: 0;
-	padding-top: 60px;
-	position: fixed;
-	left: 5%;
-	top: 0;
-	right: 5%;
-	width: 90%;
+#team .team-member p{
+	background: #fafafa;
+	margin: 0 50px;
+	padding: 40px;
+	position: relative;
+	top: -50px;
 	z-index: 1;
-}
-#mc_embed_signup .btn{
-	margin: 0;
 }
