--- a/landingpage/css/landingpage.css
+++ b/landingpage/css/landingpage.css
@@ -93,6 +93,19 @@ blockquote{
 	text-align: center;
 	width: 100%;
 }
+#sponsors{
+	padding-top: 15px;
+}
+#sponsors a{
+	opacity: 0.4;
+	padding: 0 15px;
+	-webkit-filter: grayscale(100%);
+	-webkit-transition: opacity 300ms linear, -webkit-filter 300ms linear;
+}
+#sponsors a:hover{
+	opacity: 1;
+	-webkit-filter: grayscale(0%);
+}
 /*events*/
 .event{
 	min-height: 220px;
