Added map for arrival at TN

--- a/landingpage/css/landingpage.css
+++ b/landingpage/css/landingpage.css
@@ -109,6 +109,9 @@ blockquote{
 	opacity: 1;
 	-webkit-filter: grayscale(0%);
 }
+#map{
+    padding: 15px 0;
+}
 /*events*/
 .event{
 	min-height: 220px;
