--- a/templates/events.html
+++ b/templates/events.html
@@ -2,9 +2,8 @@
 <ul class="list-unstyled">
 	<li class="event" ng-repeat="event in events">
 		<h3>{{event.title}}</h3>
-		<time datetime="{{event.start}}">{{event.start | date}}</time> -
-		<time datetime="{{event.end}}">{{event.end | date}}</time>
-		<p>
+		<p class="time"><time datetime="{{event.start}}">{{event.start | date}}</time> - <time datetime="{{event.end}}">{{event.end | date}}</time></p>
+		<p class="text">
 			{{event.place.text}}
 		</p>
 	</li>
