--- a/templates/events.html
+++ b/templates/events.html
@@ -2,9 +2,32 @@
 <ul class="list-unstyled">
 	<li class="event" ng-repeat="event in events">
 		<h3>{{event.title}}</h3>
-		<p class="time"><time datetime="{{event.start}}">{{event.start | date}}</time> - <time datetime="{{event.end}}">{{event.end | date}}</time></p>
+		<p class="time">
+			<time datetime="{{event.start}}">{{event.start | date}}</time> -
+			<time datetime="{{event.end}}">{{event.end | date}}</time>
+		</p>
 		<p class="text">
 			{{event.place.text}}
 		</p>
+		<a class="btn btn-primary signup" href="{{event.signup.url}}" title="sign up" target="_blank" ng-show="{{event.signup.open}}">&hearts; sign up &hearts;</a>
 	</li>
 </ul>
+<div id="sign-up-faq">
+	<h4>How do I sign up?</h4>
+	<p>
+		If you want to sign up for a Rails Girls 54 event you just have to fill out a small form so that we know who you are. Once you've done that, you will be pre-registered and as soon as the sign up process is finished we will get back to you via email.
+	</p>
+	<h4>Does a sign up guarantee my participation?</h4>
+	<p>
+		Unfortunately we cannot confirm every sign up we get due to limited capacities. Usualy we strech our resources to the maximum and then still make room for a few extra-slots. However, we need to set an absolute limit of participants. This is only fair for everybody who attends these events - rails girls and tutors.
+	</p>
+	<h4>How do you choose who's participating?</h4>
+	<p>
+		We make use of the first-come-first-serve principle. This simply means that the faster you sign up, the more likely we will see you at the event.
+		<br /> We will either confirm your participation after the sign up process closes or put you on our waiting list. Should one of the rails girls who got a confirmation not be able to make it, her seat may be yours.
+	</p>
+	<h4>I've got my confirmation, what now?</h4>
+	<p>
+		Congratulations, you are just one step away from being a rails girl! Just let us know that you are still in by replying to our confirmation email. Lots of things can change between sign up and confirmation and this way we can make sure that no seat will be empty.
+	</p>
+</div>
