Fixed horizontal scrolling on mobile devices

--- a/templates/supporter.html
+++ b/templates/supporter.html
@@ -1,5 +1,5 @@
 <ul class="list-unstyled">
     <li ng-repeat="supporter in supporters">
-        <a href="{{supporter.url}}" title="{{supporter.name}}" target="_blank"><img alt="{{supporter.name}}" ng-src="assets/img/{{supporter.logo}}"/></a>
+        <a href="{{supporter.url}}" title="{{supporter.name}}" target="_blank"><img class="img-responsive" alt="{{supporter.name}}" ng-src="assets/img/{{supporter.logo}}"/></a>
     </li>
 </ul>
