--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -229,23 +229,16 @@ footer {
 	text-align: center;
 }
 
-#supporter a {
+#supporter a img {
 	opacity: 0.4;
 	padding: 0 15px;
 	filter: grayscale(100%);
-	transition: opacity 300ms linear, -webkit-filter 300ms linear;
-}
-
-#supporter a:hover {
-	opacity: 1;
-	filter: grayscale(0%);
-}
-
-#supporter a img {
 	transform: scale(1, 1);
-	transition: -webkit-transform 100ms linear;
+	transition: opacity 300ms linear, filter 300ms linear, transform 100ms linear;
 }
 
 #supporter a:hover img {
+	opacity: 1;
+	filter: grayscale(0%);
 	transform: scale(1.2, 1.2);
 }
