--- a/templates/supporter.html
+++ b/templates/supporter.html
@@ -1,4 +1,4 @@
-<ul class="list-unstyled">
+<ul class="list-inline">
     <li ng-repeat="supporter in supporters">
         <a href="{{supporter.url}}" title="{{supporter.name}}" target="_blank"><img class="img-responsive" alt="{{supporter.name}}" ng-src="assets/img/{{supporter.logo}}"/></a>
     </li>
