--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,7 +70,7 @@ blockquote {
 }
 
 header {
-	background-image: url('/assets/img/header.jpg');
+	background-image: url('../../assets/img/header.jpg');
 	background-position: center center;
 	background-size: cover;
 	padding-top: 30%;
