--- a/templates/program.html
+++ b/templates/program.html
@@ -13,31 +13,19 @@
 				<td>
 					<time>17:00</time>
 				</td>
-				<td>Registration</td>
-			</tr>
-			<tr>
-				<td>
-					<time>18:00</time>
-				</td>
-				<td>Welcome</td>
-			</tr>
-			<tr>
-				<td>
-					<time>18:30</time>
-				</td>
-				<td>Motivational talk</td>
+				<td>Registration/Installation</td>
 			</tr>
 			<tr>
 				<td>
 					<time>19:00</time>
 				</td>
-				<td>Show Off</td>
+				<td>Welcome</td>
 			</tr>
 			<tr>
 				<td>
 					<time>19:30</time>
 				</td>
-				<td>Installation party</td>
+				<td>Motivational talk</td>
 			</tr>
 			<tr>
 				<td>
