--- a/templates/team.html
+++ b/templates/team.html
@@ -1,5 +1,5 @@
 <h2>Team</h2>
-<div class="team-member" ng-repeat="member in team">
+<div class="team-member" ng-repeat="member in team | orderBy:'name'">
 	<img alt="{{member.name}}" ng-src="assets/img/team/{{member.name | lowercase}}.jpg"/>
 	<p class="name">{{member.name}}</p>
 	<p class="tagline">
