--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,8 +88,9 @@ footer {
 	color: #aaa;
 	display: block;
 	font-size: 0.8em;
+	margin-top: 30px;
 	min-height: 150px;
-	padding: 50px 0;
+	padding: 30px 0 10px;
 	text-align: center;
 	width: 100%;
 }
@@ -222,9 +223,12 @@ footer {
 	display: inline-block;
 	border: 10px solid #fff;
 	border-radius: 70px;
+	background: #fafafa;
+	height: 100px;
 	margin-bottom: 20px;
 	position: relative;
 	vertical-align: middle;
+	width: 100px;
 	z-index: 2;
 }
 
