--- a/templates/program.html
+++ b/templates/program.html
@@ -1,4 +1,7 @@
 <h2>Program</h2>
+<div class="alert alert-info">
+	This is the program of the <strong>2015</strong> edition. Stay tuned for our new program.
+</div>
 <div class="row">
 	<div class="col-sm-4">
 		<table class="table table-striped">
