--- a/templates/team.html
+++ b/templates/team.html
@@ -1,4 +1,7 @@
 <h2>Team</h2>
+<div class="alert alert-info">
+	This is the core of the RG54 team. New recruits will be added soon..
+</div>
 <div class="team-member" ng-repeat="member in team | orderBy:'name'">
 	<img alt="{{member.name}}" ng-src="assets/img/team/{{member.name | lowercase}}.jpg"/>
 	<p class="name">{{member.name}}</p>
