--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 <div>
 	<p>
-		Rails Girls 54 is a project by the Free University of Bolzano Bozen to bring the Rails Girls initiative to Bolzano-Bozen and Trento
+		Rails Girls 54 is a project by the Free University of Bolzano Bozen to bring the Rails Girls initiative to Bolzano-Bozen.
 		<br /> Based on the original idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a> we are bringing tools and knowledge to your city that help you realizing your ideas.
 	</p>
 	<blockquote cite="http://railsgirls.com/">
