--- a/templates/events.html
+++ b/templates/events.html
@@ -25,6 +25,16 @@
 	<p>
 		If you want to sign up for a Rails Girls 54 event you just have to fill out a small form so that we know who you are. Once you've done that, you will be pre-registered and as soon as the sign up process is finished we will get back to you via email.
 	</p>
+	<h4>I am under 18 years old, can I still come?</h4>
+	<p>
+		Yes, of course you can! But first we need your legal guardian to <a href="assets/modulo_iscrizione_rg16.pdf" title="Sign up module" target="_blank">fill out this form</a> and send it to
+		<address>
+			Sven Helmer<br />
+			Faculty of Computer Science<br />
+			Piazza Domenicani 3<br />
+			39100 Bolzano, Italy
+		</address>
+	</p>
 	<h4>Does a sign up guarantee my participation?</h4>
 	<p>
 		Unfortunately we cannot confirm every sign up we get due to limited capacities. Usualy we strech our resources to the maximum and then still make room for a few extra-slots. However, we need to set an absolute limit of participants. This is only fair for everybody who attends these events - rails girls and tutors.
