Added cost information; added Christian, Enxhi, Isabel, Marco and Ngoc.

--- a/templates/events.html
+++ b/templates/events.html
@@ -21,6 +21,10 @@
 	</li>
 </ul>
 <div id="sign-up-faq">
+	<h4>How much does it cost?</h4>
+	<p>
+		Participating at our RG54 event will cost you nothing, niente, nada, nix. It is absoluetly <strong>free</strong> of charge. All we ask from you is your energy, your passion and your dedication.
+	</p>
 	<h4>How do I sign up?</h4>
 	<p>
 		If you want to sign up for a Rails Girls 54 event you just have to fill out a small form so that we know who you are. Once you've done that, you will be pre-registered and as soon as the sign up process is finished we will get back to you via email.
