--- a/templates/team.html
+++ b/templates/team.html
@@ -1,8 +1,14 @@
 <h2>Team</h2>
-<div class="alert alert-info">
-	This is the core of the RG54 team. New recruits will be added soon..
+<h3 class="separated">Organization</h3>
+<div class="team-member" ng-repeat="member in team | filter:'Organization' | orderBy:'name'">
+	<img alt="{{member.name}}" ng-src="assets/img/team/{{member.name | lowercase}}.jpg"/>
+	<p class="name">{{member.name}}</p>
+	<p class="tagline">
+        {{member.tagline}}
+	</p>
 </div>
-<div class="team-member" ng-repeat="member in team | orderBy:'name'">
+<h3 class="separated">Helper</h3>
+<div class="team-member" ng-repeat="member in team | filter:'Helper' | orderBy:'name'">
 	<img alt="{{member.name}}" ng-src="assets/img/team/{{member.name | lowercase}}.jpg"/>
 	<p class="name">{{member.name}}</p>
 	<p class="tagline">
