--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,15 @@ h2 {
 h3 {
 	color: #d3360b;
 	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+h3.separated {
+	border-bottom: 1px solid #eee;
+	margin-top: 40px;
+	margin-bottom: 20px;
+	margin-right: 40px;
+	padding-bottom: 20px;
 }
 
 p a,
@@ -237,7 +246,7 @@ footer {
 #team .team-member img {
 	display: inline-block;
 	border: 10px solid #fff;
-	border-radius: 70px;
+	border-radius: 50px;
 	background: #fafafa;
 	height: 100px;
 	margin-bottom: 20px;
@@ -252,7 +261,9 @@ footer {
 	display: inline-block;
 	font-size: 24px;
 	font-weight: 500;
-	margin: 40px 0 10px 20px;
+	margin-left: 20px;
+	padding-top: 25px;
+	vertical-align: top;
 }
 
 #team .team-member p.tagline {
