Added Luca, Elia and Filippo

--- a/templates/team.html
+++ b/templates/team.html
@@ -9,7 +9,7 @@
 </div>
 <h3 class="separated">Helper</h3>
 <div class="team-member" ng-repeat="member in team | filter:'Helper' | orderBy:'name'">
-	<img alt="{{member.name}}" ng-src="assets/img/team/{{member.name | lowercase}}.jpg"/>
+	<img alt="{{member.name}}" ng-src="assets/img/team/{{member.img | lowercase}}.jpg"/>
 	<p class="name">{{member.name}}</p>
 	<p class="tagline">
         {{member.tagline}}
