--- a/templates/program.html
+++ b/templates/program.html
@@ -1,7 +1,4 @@
 <h2>Program</h2>
-<div class="alert alert-info">
-	This is the program of the <strong>2015</strong> edition. Stay tuned for our new program.
-</div>
 <div class="row">
 	<div class="col-sm-4">
 		<table class="table table-striped">
@@ -13,42 +10,9 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>
-						<time>17:00</time>
-					</td>
-					<td>Registration &amp; Installation</td>
-				</tr>
-				<tr>
-					<td>
-						<time>19:00</time>
-					</td>
-					<td>Welcome</td>
-				</tr>
-				<tr>
-					<td>
-						<time>19:30</time>
-					</td>
-					<td>Motivational talk</td>
-				</tr>
-				<tr>
-					<td>
-						<time>20:15</time>
-					</td>
-					<td><i>Dinner time!</i>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<time>21:00</time>
-					</td>
-					<td>First Ruby Application</td>
-				</tr>
-				<tr>
-					<td>
-						<time>23:00</time>
-					</td>
-					<td>Venue closes</td>
+				<tr ng-repeat="item in program.friday">
+					<td><time>{{item.time}}</time></td>
+					<td>{{item.text}}</td>
 				</tr>
 			</tbody>
 		</table>
@@ -63,99 +27,9 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>
-						<time>10:00</time>
-					</td>
-					<td>Good morning!</td>
-				</tr>
-				<tr>
-					<td>
-						<time>10:30</time>
-					</td>
-					<td>Recap</td>
-				</tr>
-				<tr>
-					<td>
-						<time>11:00</time>
-					</td>
-					<td>Web workshop</td>
-				</tr>
-				<tr>
-					<td>
-						<time>11:45</time>
-					</td>
-					<td><i>Break</i>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<time>12:00</time>
-					</td>
-					<td>Ruby Basics</td>
-				</tr>
-				<tr>
-					<td>
-						<time>12:45</time>
-					</td>
-					<td>Socializing &amp; Teambuilding</td>
-				</tr>
-				<tr>
-					<td>
-						<time>13:30</time>
-					</td>
-					<td><i>Lunchtime</i>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<time>14:30</time>
-					</td>
-					<td>Idea presentation</td>
-				</tr>
-				<tr>
-					<td>
-						<time>15:00</time>
-					</td>
-					<td><i>Have a break</i>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<time>15:15</time>
-					</td>
-					<td>Introduction to MVC</td>
-				</tr>
-				<tr>
-					<td>
-						<time>16:00</time>
-					</td>
-					<td>Bentobox</td>
-				</tr>
-				<tr>
-					<td>
-						<time>16:30</time>
-					</td>
-					<td>Coding time</td>
-				</tr>
-				<tr>
-					<td>
-						<time>19:30</time>
-					</td>
-					<td><i>Dinner Time!</i>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<time>21:00</time>
-					</td>
-					<td>Coding continues</td>
-				</tr>
-				<tr>
-					<td>
-						<time>23:00</time>
-					</td>
-					<td>Venue closes</td>
+				<tr ng-repeat="item in program.saturday">
+					<td><time>{{item.time}}</time></td>
+					<td>{{item.text}}</td>
 				</tr>
 			</tbody>
 		</table>
@@ -170,60 +44,9 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>
-						<time>10:00</time>
-					</td>
-					<td>Good morning!</td>
-				</tr>
-				<tr>
-					<td>
-						<time>10:30</time>
-					</td>
-					<td>Recap</td>
-				</tr>
-				<tr>
-					<td>
-						<time>11:00</time>
-					</td>
-					<td>View</td>
-				</tr>
-				<tr>
-					<td>
-						<time>11:30</time>
-					</td>
-					<td>Controller</td>
-				</tr>
-				<tr>
-					<td>
-						<time>12:00</time>
-					</td>
-					<td>Model</td>
-				</tr>
-				<tr>
-					<td>
-						<time>12:30</time>
-					</td>
-					<td><i>Lunchtime</i>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<time>13:30</time>
-					</td>
-					<td>Coding time!</td>
-				</tr>
-				<tr>
-					<td>
-						<time>16:30</time>
-					</td>
-					<td>Your time to show off</td>
-				</tr>
-				<tr>
-					<td>
-						<time>18:00</time>
-					</td>
-					<td>Goodbye</td>
+				<tr ng-repeat="item in program.sunday">
+					<td><time>{{item.time}}</time></td>
+					<td>{{item.text}}</td>
 				</tr>
 			</tbody>
 		</table>
