New intro text; corrected spelling errors

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <div>
 	<p>
-		Rails Girls 54 is a project by the Free University of Bolzano Bozen to bring the Rails Girls initiative to Bolzano-Bozen.
-		<br /> Based on the original idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a> we are bringing tools and knowledge to your city that help you realizing your ideas.
+		Rails Girls 54 is a project by the Free University of Bolzano Bozen to build a community for women to experience and understand technology, and build their ideas in an approachable manner.<br />
+		Based on the original idea of <a href="http://railsgirls.com/" target="_blank" title="Rails Girls">Rails Girls</a> we are bringing tools and knowledge to your city that will help you realizing your ideas.<br />
 	</p>
 	<blockquote cite="http://railsgirls.com/">
 		Learn sketching, prototyping, basic programming and get introduced to the world of technology. Rails Girls was born in Finland, but is nowadays a global, non-profit volunteer community.
