--- a/templates/events.html
+++ b/templates/events.html
@@ -41,7 +41,7 @@
 	</p>
 	<h4>Does a sign up guarantee my participation?</h4>
 	<p>
-		Unfortunately we cannot confirm every sign up we get due to limited capacities. Usualy we strech our resources to the maximum and then still make room for a few extra-slots. However, we need to set an absolute limit of participants. This is only fair for everybody who attends these events - rails girls and tutors.
+		Unfortunately we cannot confirm every sign up we get due to limited capacities. Usually we stretch our resources to the maximum and then still make room for a few extra-slots. However, we need to set an absolute limit of participants. This is only fair for everybody who attends these events - rails girls and tutors.
 	</p>
 	<h4>How do you choose who's participating?</h4>
 	<p>
