--- a/templates/material.html
+++ b/templates/material.html
@@ -1,7 +1,8 @@
 <div>
 	<h2>Material</h2>
 	<ul>
-		<li><a href="https://docs.google.com/presentation/d/1PVOSjEShJAPbGY5gdTLy6Pl_gggeBv2BiLu24lyu4Vw/edit?usp=sharing" target="_blank">Introduction to Modern Web Technologies</a></li>
-		<li><a href="https://docs.google.com/presentation/d/1x2FDlH-GbGr50g3feOJxMkg3bwI9qqcxUUUgYsqpnso/edit?usp=sharing" target="_blank">Meteor Tutorial - Templates, Packages, Interaction</a></li>
+		<li ng-repeat="item in material">
+			<a href="{{item.url}}" target="_blank">{{item.name}}</a>
+		</li>
 	</ul>
 </div>
